k8s/nginx2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nginx:latest
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
          - echo '<!DOCTYPE html>
<html>
<head>
  <title>Hora actual</title>
  <style>
    body {
      background-color: #007BFF;
      color: white;
      display: flex;
      justify-content: center;
      align-items: center;
      height: 100vh;
      margin: 0;
      font-family: Arial, sans-serif;
    }

    #clock {
      font-size: 3em;
    }
  </style>
</head>
<body>

  <div id="clock"></div>

  <script>
    function actualizarHora() {
      const ahora = new Date();
      document.getElementById("clock").innerHTML = ahora.toLocaleString();
    }

    setInterval(actualizarHora, 1000);
    actualizarHora();
  </script>

</body>
</html>' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'
